--- a/Resources/Private/Templates/Page/1column.html
+++ b/Resources/Private/Templates/Page/1column.html
@@ -45,6 +45,12 @@
       </div>
     </section>
 
+    <f:if condition="{settings.nav.breadcrumb.showBreadcrumbMenu}">
+      <div class="breadcrumb-wrp container">
+        <f:render partial="Nav/Breadcrumb" arguments="{_all}" />
+      </div>
+    </f:if>
+
     <section class="1column__before-content ">
       <div class="1column__before-content-container">
         <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
