[TASK] update scrollToTop partials

--- a/Resources/Private/Partials/ContentElements/Nav/ScrollToTop.html
+++ b/Resources/Private/Partials/ContentElements/Nav/ScrollToTop.html
@@ -1,11 +1,18 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
 <f:if condition="{data.linkToTop}">
-  <a class="scroll-to-top sr-only" title="{f:translate(key: 'scrollToTop', extensionName: 't3kit')}" href="#top">
-    <span class="scroll-to-top__icon icon-scroll-to-top">
-      <f:translate key="scrollToTop" extensionName="t3kit" />
-    </span>
-  </a>
+  <div class="scroll-to-top">
+    <a class="scroll-to-top__link" title="{f:translate(key: 'scrollToTop', extensionName: 't3kit')}" href="#top">
+      <div class="scroll-to-top__icon-wrp">
+        <svg class="t3icon scroll-to-top__icon" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 01.708 0l6 6a.5.5 0 01-.708.708L8 5.707l-5.646 5.647a.5.5 0 01-.708-.708l6-6z" clip-rule="evenodd"/>
+        </svg>
+      </div>
+      <span class="scroll-to-top__text sr-only">
+        <f:translate key="scroll_to_top" extensionName="t3kit" />
+      </span>
+    </a>
+  </div>
 </f:if>
 
 </html>
