--- a/Resources/Private/Partials/ContentElements/Media/Type/Image.html
+++ b/Resources/Private/Partials/ContentElements/Media/Type/Image.html
@@ -3,7 +3,7 @@
 <div class="image-partial">
   <f:if condition="{file.link}">
     <f:then>
-      <f:link.typolink class="image-partial__link" parameter="{file.link}" title="{file.title}">
+      <f:link.typolink class="image-partial__link" parameter="{file.link}" >
         <f:render partial="Media/Render/Image" arguments="{data: data, image:file}" />
       </f:link.typolink>
     </f:then>
@@ -14,7 +14,6 @@
         <f:then>
           <div class="image-partial__zoom">
             <a href="{f:uri.image(image: file, maxWidth: '{data.image_zoom_width}')}"
-              title="{file.properties.title}"
               data-caption="{file.properties.description}"
               rel="image-partial__zoom-{data.uid}"
               class="image-partial__zoom-link">
