--- a/Resources/Private/Partials/Page/Nav/Breadcrumb.html
+++ b/Resources/Private/Partials/Page/Nav/Breadcrumb.html
@@ -13,7 +13,7 @@
               <f:render section="breadcrumbTitle" arguments="{item: item}" />
             </f:then>
             <f:else>
-              <a class="breadcrumb__list-item-link" href="{item.link}" title="{item.title}">
+              <a class="breadcrumb__list-item-link" href="{item.link}" >
                 <f:render section="breadcrumbTitle" arguments="{item: item}" />
               </a>
             </f:else>
@@ -36,7 +36,7 @@
       <f:media class="breadcrumb__list-item-image img-fluid"
         file="{item.nav_image.0}"
         alt="{item.nav_image.0.alternative}"
-        title="{item.nav_image.0.title}"
+
         loading="lazy" />
     </div>
   </f:if>
