--- a/Resources/Private/Templates/ContentElements/Menu/MenuAbstract.html
+++ b/Resources/Private/Templates/ContentElements/Menu/MenuAbstract.html
@@ -8,7 +8,7 @@
     <ul>
       <f:for each="{menu}" as="page">
         <li>
-          <a href="{page.link}" {f:if(condition: page.target, then: ' target="{page.target}"' )} title="{page.title}">
+          <a href="{page.link}" {f:if(condition: page.target, then: ' target="{page.target}"' )} >
             <span>{page.title}</span>
           </a>
           <f:if condition="{page.data.abstract}">
