--- a/Resources/Private/Templates/ContentElements/Menu/MenuCategorizedContent.html
+++ b/Resources/Private/Templates/ContentElements/Menu/MenuCategorizedContent.html
@@ -8,7 +8,7 @@
     <ul>
       <f:for each="{content}" as="element">
         <li>
-          <f:link.page pageUid="{element.data.pid}" section="{element.data.uid}" title="{element.data.header}">
+          <f:link.page pageUid="{element.data.pid}" section="{element.data.uid}">
             <span>{element.data.header}</span>
           </f:link.page>
         </li>
