--- a/Resources/Private/Templates/ContentElements/Menu/MenuSectionPages.html
+++ b/Resources/Private/Templates/ContentElements/Menu/MenuSectionPages.html
@@ -8,14 +8,14 @@
     <ul>
       <f:for each="{menu}" as="page">
         <li>
-          <a href="{page.link}" {f:if(condition: page.target, then: ' target="{page.target}"' )} title="{page.title}">
+          <a href="{page.link}" {f:if(condition: page.target, then: ' target="{page.target}"' )} >
             <span>{page.title}</span>
           </a>
           <f:if condition="{page.content}">
             <ul>
               <f:for each="{page.content}" as="element">
                 <li>
-                  <a href="{page.link}#c{element.data.uid}" {f:if(condition: page.target, then: ' target="{page.target}"' )} title="{element.data.header}">
+                  <a href="{page.link}#c{element.data.uid}" {f:if(condition: page.target, then: ' target="{page.target}"' )} >
                     <span>{element.data.header}</span>
                   </a>
                 </li>
