--- a/Resources/Private/Templates/ContentElements/Menu/MenuSitemap.html
+++ b/Resources/Private/Templates/ContentElements/Menu/MenuSitemap.html
@@ -13,7 +13,7 @@
     <ul>
       <f:for each="{menu}" as="page">
         <li>
-          <a href="{page.link}" {f:if(condition: page.target, then: ' target="{page.target}"' )} title="{page.title}">
+          <a href="{page.link}" {f:if(condition: page.target, then: ' target="{page.target}"' )} >
             <span>{page.title}</span>
           </a>
           <f:render section="Menu" arguments="{menu: page.children}" />
