[TASK] add aria-label for [read more...] type of links

--- a/Resources/Private/Partials/ContentElements/Link/ExternalLink.html
+++ b/Resources/Private/Partials/ContentElements/Link/ExternalLink.html
@@ -3,6 +3,7 @@
 <f:if condition="{data.link_title} || {data.link}">
   <f:render partial="Link/Render/ExternalLink" arguments="{
     link_title: data.link_title,
+    accessible_link_label: data.accessible_link_label,
     link_position: data.link_position,
     stretched_link : stretched_link,
     link: data.link}" />
