--- a/Resources/Private/Partials/ContentElements/Link/ButtonLink.html
+++ b/Resources/Private/Partials/ContentElements/Link/ButtonLink.html
@@ -3,6 +3,7 @@
 <f:if condition="{data.link_title} || {data.link}">
   <f:render partial="Link/Render/ButtonLink" arguments="{
     link_title: data.link_title,
+    accessible_link_label: data.accessible_link_label,
     button_no_bg: data.button_no_bg,
     button_full_width: data.button_full_width,
     button_size: data.button_size,
