--- a/Resources/Private/Templates/ContentElements/Menu/MenuAbstract.html
+++ b/Resources/Private/Templates/ContentElements/Menu/MenuAbstract.html
@@ -5,18 +5,26 @@
 <f:section name="Main">
 
   <f:if condition="{menu}">
-    <ul>
-      <f:for each="{menu}" as="page">
-        <li>
-          <a href="{page.link}" {f:if(condition: page.target, then: ' target="{page.target}"' )} >
-            <span>{page.title}</span>
-          </a>
-          <f:if condition="{page.data.abstract}">
-            <f:format.html>{page.data.abstract}</f:format.html>
-          </f:if>
-        </li>
-      </f:for>
-    </ul>
+
+    <div class="ce-menu__wrp">
+      <div class="ce-menu ce-menu--abstract">
+
+        <ul class="ce-menu__list">
+          <f:for each="{menu}" as="page">
+            <li class="ce-menu__list-item">
+              <f:render partial="Nav/PageLink" arguments="{page: page, link: '{page.link}', title: '{page.title}'}" />
+              <f:if condition="{page.data.abstract}">
+                <span class="ce-menu__list-item-abstract">
+                  <f:format.html>{page.data.abstract}</f:format.html>
+                </span>
+              </f:if>
+            </li>
+          </f:for>
+        </ul>
+
+      </div>
+    </div>
+
   </f:if>
 
 </f:section>
