--- a/Resources/Private/Templates/ContentElements/Menu/MenuCategorizedContent.html
+++ b/Resources/Private/Templates/ContentElements/Menu/MenuCategorizedContent.html
@@ -5,15 +5,24 @@
 <f:section name="Main">
 
   <f:if condition="{content}">
-    <ul>
-      <f:for each="{content}" as="element">
-        <li>
-          <f:link.page pageUid="{element.data.pid}" section="{element.data.uid}">
-            <span>{element.data.header}</span>
-          </f:link.page>
-        </li>
-      </f:for>
-    </ul>
+
+    <div class="ce-menu__wrp">
+      <div class="ce-menu ce-menu--categorized-content">
+
+        <ul class="ce-menu__list">
+          <f:for each="{content}" as="element">
+            <li class="ce-menu__list-item">
+              <f:link.page pageUid="{element.data.pid}" section="{element.data.uid}"></f:link.page>
+                <span class="ce-menu__list-item-header">{element.data.header}</span>
+              </f:link.page>
+            </li>
+          </f:for>
+        </ul>
+
+      </div>
+    </div>
+
+
   </f:if>
 
 </f:section>
