--- a/Resources/Private/Templates/ContentElements/Menu/MenuSitemapPages.html
+++ b/Resources/Private/Templates/ContentElements/Menu/MenuSitemapPages.html
@@ -3,23 +3,28 @@
 <f:layout name="Default" />
 
 <f:section name="Main">
-
   <f:render section="Menu" arguments="{menu: menu}" />
-
 </f:section>
+
 <f:section name="Menu">
 
   <f:if condition="{menu}">
-    <ul>
-      <f:for each="{menu}" as="page">
-        <li>
-          <a href="{page.link}" {f:if(condition: page.target, then: ' target="{page.target}"' )} >
-            <span>{page.title}</span>
-          </a>
-          <f:render section="Menu" arguments="{menu: page.children}" />
-        </li>
-      </f:for>
-    </ul>
+
+    <div class="ce-menu__wrp">
+      <div class="ce-menu ce-menu--sitemap-pages">
+
+        <ul class="ce-menu__list">
+          <f:for each="{menu}" as="page">
+            <li class="ce-menu__list-item">
+              <f:render partial="Nav/PageLink" arguments="{page: page, link: '{page.link}', title: '{page.title}'}" />
+              <f:render section="Menu" arguments="{menu: page.children}" />
+            </li>
+          </f:for>
+        </ul>
+
+      </div>
+    </div>
+
   </f:if>
 
 </f:section>
