--- a/Resources/Private/Templates/ContentElements/Static/Uploads.html
+++ b/Resources/Private/Templates/ContentElements/Static/Uploads.html
@@ -13,43 +13,73 @@
         <ul class="ce-uploads__list">
           <f:for each="{files}" as="file" iteration="fileIterator">
             <li class="ce-uploads__list-item">
+
               <f:if condition="{data.uploads_type} == 1">
                 <span class="ce-uploads__list-item-icon-wrp">
-                  <f:image class="ce-uploads__list-item-icon" src="EXT:t3kit/Resources/Public/Icons/FileIcons/{file.extension}.svg" alt="" />
+                  <t3kit:render.svg src="{f:uri.resource(path: 'Icons/FileIcons/{file.extension}.svg', extensionName: 't3kit')}" class="ce-uploads__list-item-icon" />
                 </span>
               </f:if>
+
               <f:if condition="{data.uploads_type} == 2">
-                <f:if condition="{file.type} > 1">
-                  <f:if
-                    condition="{f:uri.image(src: 'file:{f:if(condition: file.originalFile, then: \'file:{file.originalFile.uid}\', else: \'file:{file.uid}\')}')} != '/'">
+                <f:if condition="{file.type} > 1 && {file.type} < 5">
                     <f:then>
-                      <a class="ce-uploads__list-item-image-link" href="{file.publicUrl}"
-                        {f:if(condition:data.target,then: ' target="{data.target}"')}>
-                        <f:media class="ce-uploads__list-item-image" file="{file}" width="150" alt="{file.properties.alternative}" />
+                      <a class="ce-uploads__list-item-thumbnail-link" href="{file.publicUrl}">
+                        <f:media class="ce-uploads__list-thumbnail" file="{file}" width="150" alt="{file.properties.alternative}" title="{file.title}"/>
                       </a>
                     </f:then>
                     <f:else>
-                      <img class="ce-uploads__list-item-icon" src="{f:uri.resource(path: 'Icons/FileIcons/{file.extension}.gif', extensionName: 'frontend')}"
-                        alt="">
+                      <t3kit:render.svg src="{f:uri.resource(path: 'Icons/FileIcons/{file.extension}.svg', extensionName: 't3kit')}" class="ce-uploads__list-item-icon" />
                     </f:else>
-                  </f:if>
                 </f:if>
               </f:if>
-              <div class="ce-uploads__list-item-body">
-                <a class="ce-uploads__list-item-filename-link" href="{file.publicUrl}" {f:if(condition:data.target,then: ' target="{data.target}"' )}>
-                  <span class="ce-uploads__list-item-filename">{f:if(condition: file.properties.title, then: file.properties.title,
-                    else: file.name) -> f:format.htmlspecialchars()}</span>
+
+              <div class="ce-uploads__item-body">
+
+                <a class="ce-uploads__item-filename-link"
+                  href="{file.publicUrl}"
+                  {f:if(condition:data.target,then: ' target="{data.target}" rel="noreferrer"' )}>
+
+                  <f:if condition="{data.target}">
+                    <f:then>
+                      <strong class="ce-uploads__item-filename ce-uploads__item-filename--blank">
+                        {f:if(condition: file.properties.title, then: file.properties.title, else: file.name) -> f:format.htmlspecialchars()}
+                      </strong>
+                      <span class="ce-uploads__filename-blank-msg">
+                        <f:translate key="target_blank" extensionName="t3kit" />
+                      </span>
+                      <span class="ce-uploads__filename-blank-icon-wrp">
+                        <svg class="ce-uploads__filename-blank-icon" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                          <path fill-rule="evenodd" d="M1.5 13A1.5 1.5 0 003 14.5h8a1.5 1.5 0 001.5-1.5V9a.5.5 0 00-1 0v4a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V5a.5.5 0 01.5-.5h4a.5.5 0 000-1H3A1.5 1.5 0 001.5 5v8zm7-11a.5.5 0 01.5-.5h5a.5.5 0 01.5.5v5a.5.5 0 01-1 0V2.5H9a.5.5 0 01-.5-.5z" clip-rule="evenodd"/>
+                          <path fill-rule="evenodd" d="M14.354 1.646a.5.5 0 010 .708l-8 8a.5.5 0 01-.708-.708l8-8a.5.5 0 01.708 0z" clip-rule="evenodd"/>
+                        </svg>
+                      </span>
+                    </f:then>
+
+                    <f:else>
+                      <span class="ce-uploads__item-filename">
+                        {f:if(condition: file.properties.title, then: file.properties.title, else: file.name) -> f:format.htmlspecialchars()}
+                      </span>
+                    </f:else>
+                  </f:if>
+
                 </a>
+
                 <f:if condition="{file.properties.description}">
                   <f:if condition="{data.uploads_description}">
-                    <span class="ce-uploads__list-item-description">{file.properties.description}</span>
+                    <span class="ce-uploads__item-description">
+                      {file.properties.description}
+                    </span>
                   </f:if>
                 </f:if>
+
                 <f:if condition="{data.filelink_size}">
-                  <span class="ce-uploads__list-item-filesize">
-                    <f:format.bytes value="{file.properties.size}" /></span>
+                  <span class="ce-uploads__item-filesize">
+                    <f:format.bytes value="{file.properties.size}"/>
+                  </span>
                 </f:if>
+
               </div>
+
             </li>
           </f:for>
         </ul>
