[TASK] add skiplinks navigation

--- a/Resources/Private/Layouts/Page/Default.html
+++ b/Resources/Private/Layouts/Page/Default.html
@@ -4,7 +4,7 @@
 <f:render partial="Js/Jquery" arguments="{_all}" />
 <f:render partial="Js/Mainjs" arguments="{_all}" />
 
-
+<f:render partial="Nav/SkipLinks" arguments="{_all}" />
 <div id="top"></div>
 
 <f:render section="Main" />
