--- a/Resources/Private/Templates/Page/1column.html
+++ b/Resources/Private/Templates/Page/1column.html
@@ -37,7 +37,7 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <main class="1column">
+  <main id="main" class="1column">
 
     <section class="1column__top-content">
       <div class="1column__top-content-container">
