--- a/Resources/Private/Templates/Page/3columnsSidenav.html
+++ b/Resources/Private/Templates/Page/3columnsSidenav.html
@@ -37,7 +37,7 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <main class="3columns-sidenav">
+  <main id="main" class="3columns-sidenav">
 
     <section class="3columns-sidenav__top-content">
       <div class="3columns-sidenav__top-content-container">
