--- a/Resources/Private/Templates/Page/4columns.html
+++ b/Resources/Private/Templates/Page/4columns.html
@@ -37,7 +37,7 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <main class="4columns">
+  <main id="main" class="4columns">
 
     <section class="4columns__top-content">
       <div class="4columns__top-content-container">
