--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -37,7 +37,7 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <main class="default">
+  <main id="main" class="default">
 
     <f:if condition="{settings.nav.breadcrumb.showBreadcrumbMenu}">
       <div class="breadcrumb-wrp container">
