--- a/Resources/Private/Templates/Page/Empty.html
+++ b/Resources/Private/Templates/Page/Empty.html
@@ -35,7 +35,7 @@
 
 <f:section name="Main">
 
-  <main class="empty">
+  <main id="main" class="empty">
 
     <section class="empty__content">
       <div class="empty__content-container">
