--- a/Resources/Private/Templates/Page/Sidenav251column75.html
+++ b/Resources/Private/Templates/Page/Sidenav251column75.html
@@ -37,7 +37,7 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <main class="sidenav25-1column75">
+  <main id="main" class="sidenav25-1column75">
 
     <section class="sidenav25-1column75__top-content">
       <div class="sidenav25-1column75__top-content-container">
