--- a/theme/src/scss/main.scss
+++ b/theme/src/scss/main.scss
@@ -31,6 +31,7 @@
 // // ===== helpers =====
 // // @use 'helpers/content-margins';
 @use 'helpers/figure-types';
+@use 'helpers/skip-links';
 
 // ===== print =====
 // @use 'print';
