--- a/Resources/Private/Templates/Page/1column75Sidenav25.html
+++ b/Resources/Private/Templates/Page/1column75Sidenav25.html
@@ -37,7 +37,7 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <main class="1column75-sidenav25">
+  <main id="main" class="1column75-sidenav25">
 
     <section class="1column75-sidenav25__top-content">
       <div class="1column75-sidenav25__top-content-container">
