--- a/Resources/Private/Templates/Page/2columns2550Sidenav25.html
+++ b/Resources/Private/Templates/Page/2columns2550Sidenav25.html
@@ -37,7 +37,7 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <main class="2columns25-50-sidenav25">
+  <main id="main" class="2columns25-50-sidenav25">
 
     <section class="2columns25-50-sidenav25__top-content">
       <div class="2columns25-50-sidenav25__top-content-container">
