--- a/Resources/Private/Templates/Page/3columns255025.html
+++ b/Resources/Private/Templates/Page/3columns255025.html
@@ -37,7 +37,7 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <main class="3columns25-50-25">
+  <main id="main" class="3columns25-50-25">
 
     <section class="3columns25-50-25__top-content">
       <div class="3columns25-50-25__top-content-container">
