--- a/Resources/Private/Templates/Page/Sidenav252columns5025.html
+++ b/Resources/Private/Templates/Page/Sidenav252columns5025.html
@@ -37,7 +37,7 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <main class="sidenav25-2columns50-25">
+  <main id="main" class="sidenav25-2columns50-25">
 
     <section class="sidenav25-2columns50-25__top-content">
       <div class="sidenav25-2columns50-25__top-content-container">
