--- a/Resources/Private/Templates/Page/Sidenav3columns.html
+++ b/Resources/Private/Templates/Page/Sidenav3columns.html
@@ -37,7 +37,7 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <main class="sidenav-3columns">
+  <main id="main" class="sidenav-3columns">
 
     <section class="sidenav-3columns__top-content">
       <div class="sidenav-3columns__top-content-container">
