--- a/Resources/Private/Partials/ContentElements/Nav/ScrollToTop.html
+++ b/Resources/Private/Partials/ContentElements/Nav/ScrollToTop.html
@@ -4,7 +4,7 @@
   <div class="scroll-to-top">
     <a class="scroll-to-top__link" href="#top">
       <div class="scroll-to-top__icon-wrp">
-        <svg class="t3icon scroll-to-top__icon" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <svg class="t3icon scroll-to-top__icon" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
           <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 01.708 0l6 6a.5.5 0 01-.708.708L8 5.707l-5.646 5.647a.5.5 0 01-.708-.708l6-6z" clip-rule="evenodd"/>
         </svg>
       </div>
