--- a/Resources/Private/Templates/ContentElements/Static/Uploads.html
+++ b/Resources/Private/Templates/ContentElements/Static/Uploads.html
@@ -35,20 +35,20 @@
 
               <div class="ce-uploads__item-body">
 
-                <a class="ce-uploads__item-filename-link"
+                <a class="ce-uploads__item-filename-link {f:if(condition:data.target,then: ' target-blank-link')}"
                   href="{file.publicUrl}"
                   {f:if(condition:data.target,then: ' target="{data.target}" rel="noreferrer"' )}>
 
                   <f:if condition="{data.target}">
                     <f:then>
-                      <strong class="ce-uploads__item-filename ce-uploads__item-filename--blank">
+                      <strong class="ce-uploads__item-filename target-blank-link__title">
                         {f:if(condition: file.properties.title, then: file.properties.title, else: file.name) -> f:format.htmlspecialchars()}
                       </strong>
-                      <span class="ce-uploads__filename-blank-msg">
+                      <span class="target-blank-link__msg">
                         <f:translate key="target_blank" extensionName="t3kit" />
                       </span>
-                      <span class="ce-uploads__filename-blank-icon-wrp">
-                        <svg class="ce-uploads__filename-blank-icon" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                      <span class="target-blank-link__icon-wrp">
+                        <svg class="target-blank-link__icon" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                           <path fill-rule="evenodd" d="M1.5 13A1.5 1.5 0 003 14.5h8a1.5 1.5 0 001.5-1.5V9a.5.5 0 00-1 0v4a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V5a.5.5 0 01.5-.5h4a.5.5 0 000-1H3A1.5 1.5 0 001.5 5v8zm7-11a.5.5 0 01.5-.5h5a.5.5 0 01.5.5v5a.5.5 0 01-1 0V2.5H9a.5.5 0 01-.5-.5z" clip-rule="evenodd"/>
                           <path fill-rule="evenodd" d="M14.354 1.646a.5.5 0 010 .708l-8 8a.5.5 0 01-.708-.708l8-8a.5.5 0 01.708 0z" clip-rule="evenodd"/>
                         </svg>
