--- a/theme/src/scss/main.scss
+++ b/theme/src/scss/main.scss
@@ -32,6 +32,7 @@
 // // @use 'helpers/content-margins';
 @use 'helpers/figure-types';
 @use 'helpers/skip-links';
+@use 'helpers/target-blank';
 
 // ===== print =====
 // @use 'print';
