--- a/theme/src/scss/main.scss
+++ b/theme/src/scss/main.scss
@@ -33,6 +33,7 @@
 @use 'helpers/figure-types';
 @use 'helpers/skip-links';
 @use 'helpers/target-blank';
+@use 'helpers/scroll-to-top';
 
 // ===== print =====
 // @use 'print';
